force-app/main/default/objects/Volunteer__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;https://c.prerelna1.content.pre.force.com/sfc/servlet.shepherd/version/download/Image_ID__c&quot;, User__r.FirstName, 75, 92)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>