force-app/main/default/objects/Volunteer__c/fields/VolunteerEvent__c.field-meta.xml
<CustomField>
    <fullName>VolunteerEvent__c</fullName>
    <label>Volunteer Event</label>
    <referenceTo>VolunteerEvent__c</referenceTo>
    <relationshipLabel>Volunteers</relationshipLabel>
    <relationshipName>Volunteers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>